Rename ProcessingTxtFile to CalculationEngine